TIFF: initialize the layer being read with its IFD's color space

BUG: 408755